# Hive-Discover-Backend

./: .gitignore  README.md  account_manager.py  agent.py  agents.py  analytics.py  config.py  database.py  docker-compose.yml  flask_server.py  helper.py  hive.py  log.txt  main.py  multi_agents.py  network.py  posts_manager.py  requirements.txt  server.py
CPP/: CMakeLists.txt  CMakeSettings.json  CPP.sln  Dockerfile  main.cpp  nmslib_api.cpp  nmslib_api.h  nmslib_worker.cpp  nmslib_worker.h
CPP/Nmslib-API/: CMakeLists.txt  api.cpp  main.cpp  worker.cpp
CPP/Simple-Web-Server/: README.md
CPP/dev/: Background-Dockerfile
CPP/hnswlib/: README.md
CPP/include/ImageAPI/: listener.h  searching.h
CPP/include/NswAPI/: calc_feed.h  index.h  listener.h
CPP/include/Others/: base64.h  strings.h
CPP/include/User/: account.h
CPP/nmslib_api/: nmslib_api.cpp  nmslib_api.vcxproj  nmslib_api.vcxproj.filters  ~AutoRecover.nmslib_api.vcxproj
CPP/nmslib_api/Debug/: vc142.idb
CPP/nmslib_api/Debug/nmslib_api.tlog/: nmslib_api.lastbuildstate
CPP/nmslib_api/x64/Debug/: nmslib_api.exe.recipe  vc142.idb
CPP/nmslib_api/x64/Debug/nmslib_api.tlog/: link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nmslib_api.lastbuildstate
CPP/src/: main.cpp
CPP/src/ImageAPI/: listener.cpp  searching.cpp
CPP/src/NswAPI/: calc_feed.cpp  index.cpp  listener.cpp
CPP/src/Others/: strings.cpp
CPP/src/User/: account.cpp
CPP/test/: Dockerfile
CPP/x64/Debug/: nmslib_api.ilk
NodeJS/: Dockerfile  amable-db.js  app.js  config.js  database.js  devThings.js  logging.js  package-lock.json  package.json
NodeJS/API/: Dockerfile  api_keys.js  app.js  config.js  database.js  hivemanager.js  package-lock.json  package.json  sorting.js  stats.js
NodeJS/API/routes/: accounts.js  images.js  proxy.js  search.js
NodeJS/acc_analyzer/: analyzer.js
NodeJS/chain_listener/: listener.js  processing.js
Python/: Background-Dockerfile  Dockerfile  account_manager.py  account_processing.py  agents.py  config.py  cprofiling.py  database.py  helper.py  hive.py  main.py  multi_agents_old.py  network.py  posts_manager.py  requirements.txt
Python/api/: accounts.py  app.py  models.py  search.py  stats.py
Python/bot/: ac_bot.py
Python/chain_listener/: block_processing.py  listener.py
Python/nmslib_api/: app.py  feed_making.py
Python/posts_analyzer/: analyzer.py  async_categorizer.py  categorizer.py  lang_detector.py  post_vectorizer.py
Python/webdemo/: demo.py
account_manager/: account_analyzer.py  feed_making.py  manager.py
account_tasks/: account_analyzer.py  feed_making.py
api/: accounts.py  app.py  models.py  search.py  stats.py
data/: TextCNN.pt  TextCNN.v1.pt  test_set.json  training_set.json  word2vec.gen
flask/: analytics.py  main.py
js_web/: manage.py
js_web/main/: urls.py  views.py
js_web/main/templates/: error.js  get_author_category.js  get_interesting_posts.js  get_post_category.js  ping.js
js_web/web_project/: settings.py  urls.py
server/: hive.py  main.py  network.py  test_set.json
server/data/: README.md  test_set.json
test/: client.py
